--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^11.3.0",
     "@mui/core": "^5.0.0-alpha.53",
     "@mui/material": "^5.0.6",
+    "antd": "^4.16.13",
     "axios": "^0.24.0",
     "cra-template": "1.1.2",
     "date-fns": "^2.25.0",
