--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,6 +18,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
+    "mongoose": "^6.0.12",
+    "nodemon": "^2.0.14",
     "redis": "^3.1.2",
     "ws": "^8.2.3"
   }
